--- a/README.me
+++ b/README.me
@@ -1,7 +1,7 @@
  🍣 Dashboard Admin - Responsvivo<br>
 
 ## 🖥 Visualização
-![Resultado final do projeto]![](assets/img/responsivo1.png)
+![Resultado final do projeto]![](https://raw.githubusercontent.com/alexsanderfer/dashboardAdminResponsivo/master/assets/img/responsivo1.png)
 
 ## 🌳 Projeto<br>
 Criado para fins de estudos e para talvez aproveitar o layout.<br>
