--- a/README.me
+++ b/README.me
@@ -1,7 +1,9 @@
  🍣 Dashboard Admin - Responsvivo<br>
 
 ## 🖥 Visualização
-![Resultado final do projeto]![](assets/img/responsivo1.png)
+
+**_**Resultado Final:**_** 
+![](C:\Users\Alexsander Fernandes\PhpstormProjects\dashboardAdminResponsivo\assets\img\responsivo1.png)
 
 ## 🌳 Projeto<br>
 Criado para fins de estudos e para talvez aproveitar o layout.<br>
