--- a/README.me
+++ b/README.me
@@ -1,8 +1,4 @@
- 🍣 Dashboard Admin - Responsvivo<br>
-
-## 🖥 Visualização
-_Resultado Final_
-![](C:\Users\Alexsander Fernandes\PhpstormProjects\dashboardAdminResponsivo\assets\img\responsivo1.png)![]()
+ 🍣 Dashboard Admin - Responsivo<br>
 
 ## 🌳 Projeto<br>
 Criado para fins de estudos e para talvez aproveitar o layout.<br>
@@ -12,9 +8,9 @@ O site é composto por 5 seções diferentes:
 
 - **Seção Navigation:** A barra de navegação que se encontra à direita.
 - **Seção Main:** O main é onde se encontra o resto do conteúdo;
-- **Seção Topbar:** Onde se encontra o botão em forma de "hamburguer", a barra de pesquisa e o avatar do usuário.;
+- **Seção Topbar:** Onde se encontra o botão em forma de "hambúrguer", a barra de pesquisa e o avatar do usuário;
 - **Seção CardBox:** Seção reservada aos itens que contém número e estão logo acima da seção table;
-- **Seção Table:** Encontra-se informações sobre os pedidos e os novos clientes:
+- **Seção Table:** Encontram-se informações sobre os pedidos e os novos clientes:
 
 ## 🛠 Tecnologias utilizadas
 Para o desenvolvimento deste site utilizei as seguintes tecnologias:
